--- a/killzone.html
+++ b/killzone.html
@@ -135,10 +135,10 @@
     </div>
 
     <div class="text">
-        <h1 id="head">Hello,<br>It's&nbspme &nbsp Net- Manger</h1>
+        <h1 id="head">Hello,<br>It's&nbspme &nbsp Net- Manager</h1>
         <pre id="body">
 I help create and manage fast and effective
-LAN netwoks with easy and intutive mangment 
+LAN networks with easy and intuitive management
 systems and training for staff
         </pre>
     </div>
